# cmake-learn

./: README.md
cmake01/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello  main.cpp
cmake02/: README.md
cmake03/: CMakeLists.txt  README.md
cmake03/src/: main.cpp
cmake04/: CMakeLists.txt  README.md
cmake04/src/: CMakeLists.txt
cmake05/: CMakeLists.txt  README.md
cmake05/lib/: CMakeLists.txt
cmake06/: CMakeLists.txt  README.md
cmake06/src/: CMakeLists.txt  main.cpp
